lab3 kick off (2) settinf credentials

--- a/lab3.ipynb
+++ b/lab3.ipynb
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "cf165e82",
    "metadata": {
     "ExecuteTime": {
@@ -203,12 +203,11 @@
    },
    "outputs": [],
    "source": [
-    "# carne_1 = \n",
-    "# firma_mecanografiada_1 = \n",
-    "# carne_2 = \n",
-    "# firma_mecanografiada_2 = \n",
-    "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "carne_1 = \"22397\"\n",
+    "firma_mecanografiada_1 = \"Josue Marroquin\"\n",
+    "carne_2 = \"22295\"\n",
+    "firma_mecanografiada_2 = \"Sebastian Huertas\"\n",
+    "# YOUR CODE HERE"
    ]
   },
   {
