--- a/lab3.ipynb
+++ b/lab3.ipynb
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "b4fa65b0",
    "metadata": {
     "ExecuteTime": {
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "53d221fd",
    "metadata": {
     "ExecuteTime": {
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "cf165e82",
    "metadata": {
     "ExecuteTime": {
@@ -124,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "6688fc4e",
    "metadata": {
     "ExecuteTime": {
@@ -182,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "id": "18be1d23",
    "metadata": {
     "ExecuteTime": {
@@ -212,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "id": "8d952cf0",
    "metadata": {
     "ExecuteTime": {
@@ -316,7 +316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "6cfc979b",
    "metadata": {
     "ExecuteTime": {
@@ -336,7 +336,16 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Una secuencia del grupo generado\n",
+      "['a', 'a', 'a', 'a', 'a', 'a', 'a', 'a', 'b', 'b', 'b', 'b', 'b', 'b', 'b', 'b', 'EOS']\n"
+     ]
+    }
+   ],
    "source": [
     "# Reseed the cell\n",
     "np.random.seed(seed_)\n",
@@ -412,7 +421,20 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NotImplementedError",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mNotImplementedError\u001b[39m                       Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[11]\u001b[39m\u001b[32m, line 52\u001b[39m\n\u001b[32m     48\u001b[39m         \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mNotImplementedError\u001b[39;00m()\n\u001b[32m     50\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m word_to_idx, idx_to_word, num_sentences, vocab_size\n\u001b[32m---> \u001b[39m\u001b[32m52\u001b[39m word_to_idx, idx_to_word, num_sequences, vocab_size = \u001b[43mseqs_to_dicts\u001b[49m\u001b[43m(\u001b[49m\u001b[43msequences\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m     54\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[33mTenemos \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mnum_sequences\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m secuencias y \u001b[39m\u001b[38;5;132;01m{\u001b[39;00m\u001b[38;5;28mlen\u001b[39m(word_to_idx)\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m tokens unicos incluyendo UNK\u001b[39m\u001b[33m\"\u001b[39m)\n\u001b[32m     55\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[33mEl indice de \u001b[39m\u001b[33m'\u001b[39m\u001b[33mb\u001b[39m\u001b[33m'\u001b[39m\u001b[33m es \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mword_to_idx[\u001b[33m'\u001b[39m\u001b[33mb\u001b[39m\u001b[33m'\u001b[39m]\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m\"\u001b[39m)\n",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[11]\u001b[39m\u001b[32m, line 48\u001b[39m, in \u001b[36mseqs_to_dicts\u001b[39m\u001b[34m(sequences)\u001b[39m\n\u001b[32m     46\u001b[39m     idx_to_word[idx] = word\n\u001b[32m     47\u001b[39m     \u001b[38;5;66;03m# YOUR CODE HERE\u001b[39;00m\n\u001b[32m---> \u001b[39m\u001b[32m48\u001b[39m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mNotImplementedError\u001b[39;00m()\n\u001b[32m     50\u001b[39m \u001b[38;5;28;01mreturn\u001b[39;00m word_to_idx, idx_to_word, num_sentences, vocab_size\n",
+      "\u001b[31mNotImplementedError\u001b[39m: "
+     ]
+    }
+   ],
    "source": [
     "def seqs_to_dicts(sequences):\n",
     "    \"\"\"\n",
@@ -458,10 +480,9 @@
     "    # Llenado de diccionarios\n",
     "    for idx, word in enumerate(unique_words):\n",
     "        # Aprox 2 lineas para agregar\n",
-    "        # word_to_idx[word] = \n",
-    "        # idx_to_word[idx] = \n",
+    "        word_to_idx[word] = idx\n",
+    "        idx_to_word[idx] = word\n",
     "        # YOUR CODE HERE\n",
-    "        raise NotImplementedError()\n",
     "        \n",
     "    return word_to_idx, idx_to_word, num_sentences, vocab_size\n",
     "\n",
