one hot encodings

--- a/lab3.ipynb
+++ b/lab3.ipynb
@@ -402,7 +402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "8940eccd",
    "metadata": {
     "ExecuteTime": {
@@ -423,15 +423,12 @@
    },
    "outputs": [
     {
-     "ename": "NotImplementedError",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mNotImplementedError\u001b[39m                       Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[11]\u001b[39m\u001b[32m, line 52\u001b[39m\n\u001b[32m     48\u001b[39m         \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mNotImplementedError\u001b[39;00m()\n\u001b[32m     50\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m word_to_idx, idx_to_word, num_sentences, vocab_size\n\u001b[32m---> \u001b[39m\u001b[32m52\u001b[39m word_to_idx, idx_to_word, num_sequences, vocab_size = \u001b[43mseqs_to_dicts\u001b[49m\u001b[43m(\u001b[49m\u001b[43msequences\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m     54\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[33mTenemos \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mnum_sequences\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m secuencias y \u001b[39m\u001b[38;5;132;01m{\u001b[39;00m\u001b[38;5;28mlen\u001b[39m(word_to_idx)\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m tokens unicos incluyendo UNK\u001b[39m\u001b[33m\"\u001b[39m)\n\u001b[32m     55\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[33mEl indice de \u001b[39m\u001b[33m'\u001b[39m\u001b[33mb\u001b[39m\u001b[33m'\u001b[39m\u001b[33m es \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mword_to_idx[\u001b[33m'\u001b[39m\u001b[33mb\u001b[39m\u001b[33m'\u001b[39m]\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m\"\u001b[39m)\n",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[11]\u001b[39m\u001b[32m, line 48\u001b[39m, in \u001b[36mseqs_to_dicts\u001b[39m\u001b[34m(sequences)\u001b[39m\n\u001b[32m     46\u001b[39m     idx_to_word[idx] = word\n\u001b[32m     47\u001b[39m     \u001b[38;5;66;03m# YOUR CODE HERE\u001b[39;00m\n\u001b[32m---> \u001b[39m\u001b[32m48\u001b[39m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mNotImplementedError\u001b[39;00m()\n\u001b[32m     50\u001b[39m \u001b[38;5;28;01mreturn\u001b[39;00m word_to_idx, idx_to_word, num_sentences, vocab_size\n",
-      "\u001b[31mNotImplementedError\u001b[39m: "
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tenemos 100 secuencias y 4 tokens unicos incluyendo UNK\n",
+      "El indice de 'b' es 1\n",
+      "La palabra con indice 1 es b\n"
      ]
     }
    ],
@@ -495,7 +492,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "8e17b1e6",
    "metadata": {
     "ExecuteTime": {
@@ -516,7 +513,56 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "        <div class=\"alert alert-box alert-success\">\n",
+       "        <h1> <!--{id:\"CORRECTMARK\", marks:\"3\"}--> \n",
+       "         ✓ [3 marks] \n",
+       "         </h1> </div>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "        <div class=\"alert alert-box alert-success\">\n",
+       "        <h1> <!--{id:\"CORRECTMARK\", marks:\"2\"}--> \n",
+       "         ✓ [2 marks] \n",
+       "         </h1> </div>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "        <div class=\"alert alert-box alert-success\">\n",
+       "        <h1> <!--{id:\"CORRECTMARK\", marks:\"5\"}--> \n",
+       "         ✓ [5 marks] \n",
+       "         </h1> </div>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "with tick.marks(3):        \n",
     "    assert(check_scalar(len(word_to_idx), '0xc51b9ba8'))\n",
@@ -555,7 +601,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "f2d35905",
    "metadata": {
     "ExecuteTime": {
@@ -575,7 +621,17 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Largo del training set 80\n",
+      "Largo del validation set 10\n",
+      "Largo del test set 10\n"
+     ]
+    }
+   ],
    "source": [
     "from torch.utils import data\n",
     "\n",
@@ -666,7 +722,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "a50596f4",
    "metadata": {
     "ExecuteTime": {
@@ -686,7 +742,16 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Encodeado de 'a' con forma (4,)\n",
+      "Encodeado de la secuencia 'a b' con forma (2, 4, 1).\n"
+     ]
+    }
+   ],
    "source": [
     "def one_hot_encode(idx, vocab_size):\n",
     "    \"\"\"\n",
