--- a/lab3.ipynb
+++ b/lab3.ipynb
@@ -854,7 +854,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "id": "e83d6394",
    "metadata": {
     "ExecuteTime": {
@@ -922,30 +922,18 @@
     "     hidden_size:  Dimensiones del hidden state\n",
     "     vocab_size: Dimensión del vocabulario\n",
     "    \"\"\"\n",
-    "    # Aprox 5 lineas para \n",
-    "    # Definir la matriz de pesos (input del hidden state)\n",
-    "    # U = \n",
-    "    # Definir la matriz de pesos de los calculos recurrentes\n",
-    "    # V = \n",
-    "    # Definir la matriz de pesos del hidden state a la salida\n",
-    "    # W = \n",
-    "    # Bias del hidden state\n",
-    "    # b_hidden = \n",
-    "    # Bias de la salida\n",
-    "    # b_out = \n",
-    "    # Para estas use np.zeros y asegurese de darle las dimensiones correcta a cada elemento\n",
-    "    # YOUR CODE HERE\n",
-    "    raise NotImplementedError()\n",
+    "    # Inicialización con ceros (para definir forma)\n",
+    "    U = np.zeros((hidden_size, vocab_size))\n",
+    "    V = np.zeros((hidden_size, hidden_size))\n",
+    "    W = np.zeros((vocab_size, hidden_size))\n",
+    "    b_hidden = np.zeros((hidden_size, 1))\n",
+    "    b_out = np.zeros((vocab_size, 1))\n",
     "    \n",
-    "    # Aprox 3 lineas para inicializar los pesos de forma ortogonal usando la\n",
-    "    # funcion init_orthogonal\n",
-    "    # U =\n",
-    "    # V = \n",
-    "    # W = \n",
-    "    # YOUR CODE HERE\n",
-    "    raise NotImplementedError()\n",
-    "    \n",
-    "    # Return parameters as a tuple\n",
+    "    # Inicialización ortogonal\n",
+    "    U = init_orthogonal(U)\n",
+    "    V = init_orthogonal(V)\n",
+    "    W = init_orthogonal(W)\n",
+    "\n",
     "    return U, V, W, b_hidden, b_out\n",
     "\n",
     "\n",
@@ -954,7 +942,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "id": "869c3065",
    "metadata": {
     "ExecuteTime": {
@@ -975,7 +963,88 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "        <div class=\"alert alert-box alert-success\">\n",
+       "        <h1> <!--{id:\"CORRECTMARK\", marks:\"5\"}--> \n",
+       "         ✓ [5 marks] \n",
+       "         </h1> </div>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "        <div class=\"alert alert-box alert-success\">\n",
+       "        <h1> <!--{id:\"CORRECTMARK\", marks:\"5\"}--> \n",
+       "         ✓ [5 marks] \n",
+       "         </h1> </div>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "        <div class=\"alert alert-box alert-success\">\n",
+       "        <h1> <!--{id:\"CORRECTMARK\", marks:\"5\"}--> \n",
+       "         ✓ [5 marks] \n",
+       "         </h1> </div>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "        <div class=\"alert alert-box alert-success\">\n",
+       "        <h1> <!--{id:\"CORRECTMARK\", marks:\"5\"}--> \n",
+       "         ✓ [5 marks] \n",
+       "         </h1> </div>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "        <div class=\"alert alert-box alert-success\">\n",
+       "        <h1> <!--{id:\"CORRECTMARK\", marks:\"5\"}--> \n",
+       "         ✓ [5 marks] \n",
+       "         </h1> </div>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "with tick.marks(5):        \n",
     "    assert check_hash(params[0], ((50, 4), 80.24369675632171))\n",
@@ -1017,7 +1086,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "id": "dd9c9363",
    "metadata": {
     "ExecuteTime": {
@@ -1048,9 +1117,8 @@
     "    \"\"\"\n",
     "    x_safe = x + 1e-12 #Evitar ceros\n",
     "    # Aprox 1 linea sobre x_safe para implementar la funcion\n",
-    "    # f =\n",
+    "    f = 1 / (1 + np.exp(-x_safe))\n",
     "    # YOUR CODE HERE\n",
-    "    raise NotImplementedError()\n",
     "    \n",
     "    # Regresa la derivada de la funcion\n",
     "    if derivative: \n",
@@ -1069,9 +1137,8 @@
     "    \"\"\"\n",
     "    x_safe = x + 1e-12 #Evitar ceros\n",
     "    # Aprox 1 linea sobre x_safe para implementar la funcion\n",
-    "    # f =\n",
+    "    f = np.tanh(x_safe)\n",
     "    # YOUR CODE HERE\n",
-    "    raise NotImplementedError()\n",
     "    \n",
     "    # Regresa la derivada de la funcion\n",
     "    if derivative: \n",
@@ -1090,9 +1157,9 @@
     "    \"\"\"\n",
     "    x_safe = x + 1e-12 #Evitar ceros\n",
     "    # Aprox 1 linea sobre x_safe para implementar la funcion\n",
-    "    # f =\n",
+    "    exp_x = np.exp(x_safe)\n",
+    "    f = exp_x / np.sum(exp_x)\n",
     "    # YOUR CODE HERE\n",
-    "    raise NotImplementedError()\n",
     "    \n",
     "    # Regresa la derivada de la funcion\n",
     "    if derivative: \n",
@@ -1104,7 +1171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "id": "86e6f5b7",
    "metadata": {
     "ExecuteTime": {
@@ -1125,7 +1192,56 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "        <div class=\"alert alert-box alert-success\">\n",
+       "        <h1> <!--{id:\"CORRECTMARK\", marks:\"5\"}--> \n",
+       "         ✓ [5 marks] \n",
+       "         </h1> </div>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "        <div class=\"alert alert-box alert-success\">\n",
+       "        <h1> <!--{id:\"CORRECTMARK\", marks:\"5\"}--> \n",
+       "         ✓ [5 marks] \n",
+       "         </h1> </div>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "        <div class=\"alert alert-box alert-success\">\n",
+       "        <h1> <!--{id:\"CORRECTMARK\", marks:\"5\"}--> \n",
+       "         ✓ [5 marks] \n",
+       "         </h1> </div>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "with tick.marks(5):        \n",
     "    assert check_hash(sigmoid(params[0][0]), ((4,), 6.997641543410888))\n",
