--- a/lab3.ipynb
+++ b/lab3.ipynb
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 228,
    "id": "b4fa65b0",
    "metadata": {
     "ExecuteTime": {
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 229,
    "id": "53d221fd",
    "metadata": {
     "ExecuteTime": {
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 230,
    "id": "cf165e82",
    "metadata": {
     "ExecuteTime": {
@@ -124,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 231,
    "id": "6688fc4e",
    "metadata": {
     "ExecuteTime": {
@@ -182,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 232,
    "id": "18be1d23",
    "metadata": {
     "ExecuteTime": {
@@ -212,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 233,
    "id": "8d952cf0",
    "metadata": {
     "ExecuteTime": {
@@ -316,7 +316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 234,
    "id": "6cfc979b",
    "metadata": {
     "ExecuteTime": {
@@ -402,7 +402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 235,
    "id": "8940eccd",
    "metadata": {
     "ExecuteTime": {
@@ -492,7 +492,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 236,
    "id": "8e17b1e6",
    "metadata": {
     "ExecuteTime": {
@@ -601,7 +601,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 237,
    "id": "f2d35905",
    "metadata": {
     "ExecuteTime": {
@@ -722,7 +722,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 238,
    "id": "a50596f4",
    "metadata": {
     "ExecuteTime": {
@@ -854,7 +854,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 239,
    "id": "e83d6394",
    "metadata": {
     "ExecuteTime": {
@@ -942,7 +942,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 240,
    "id": "869c3065",
    "metadata": {
     "ExecuteTime": {
@@ -1086,7 +1086,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 241,
    "id": "dd9c9363",
    "metadata": {
     "ExecuteTime": {
@@ -1171,7 +1171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 242,
    "id": "86e6f5b7",
    "metadata": {
     "ExecuteTime": {
@@ -1277,7 +1277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 243,
    "id": "9bb06776",
    "metadata": {
     "ExecuteTime": {
@@ -1339,7 +1339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 244,
    "id": "1c095221",
    "metadata": {
     "ExecuteTime": {
@@ -1447,7 +1447,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "id": "09c404d5",
    "metadata": {
     "ExecuteTime": {
@@ -1521,47 +1521,31 @@
     "    # NB: Iteramos de regreso sobre t=N hasta 0\n",
     "    for t in reversed(range(len(outputs))):\n",
     "\n",
-    "        # Aprox 1 linea para calcular la perdida cross-entry (un escalar)\n",
     "        # Hint: Sumen +1e-12 a cada output_t\n",
-    "        # Hint2: Recuerden que la perdida es el promedio de multiplicar el logaritmo de los output con los targets\n",
-    "        loss += -np.sum(targets[t] * np.log(outputs[t] + 1e-12))\n",
-    "        # YOUR CODE HERE\n",
-    "        \n",
-    "        \n",
+    "        loss += -np.sum(targets[t] * np.log(outputs[t] + 1e-12)) / targets[t].shape[0]\n",
+    "\n",
     "        d_o = outputs[t].copy()\n",
     "        # Aprox 1 linea para backpropagate en los output (derivada del cross-entropy)\n",
     "        # Si se sienten perdidos refieran a esta lectura: http://cs231n.github.io/neural-networks-case-study/#grad\n",
-    "        d_o[targets[t] == 1] -= 1\n",
-    "        # YOUR CODE HERE\n",
-    "        \n",
-    "        # Aprox 1 lineas para hacer el backpropagation de W\n",
+    "        d_o -= targets[t] \n",
     "        d_W += np.dot(d_o, hidden_states[t].T)\n",
-    "        # YOUR CODE HERE\n",
     "        d_b_out += d_o\n",
     "        \n",
     "        # Aprox 1 linea para hacer el backprop de h\n",
     "        d_h = np.dot(W.T, d_o) + d_h_next\n",
-    "        # Hint: Probablemente necesiten sacar la transpuesta de W\n",
-    "        # Hint2: Recuerden sumar el bias correcto!\n",
-    "        # YOUR CODE HERE\n",
-    "        \n",
+    "\n",
+    "\n",
     "        # Aprox 1 linea para calcular el backprop en la funcion de activacion tanh\n",
-    "        d_f = d_h * tanh(hidden_states[t], derivative=True)\n",
+    "        d_f = tanh(hidden_states[t], derivative=True) * d_h\n",
     "        # Hint: Recuerden pasar el parametro derivate=True a la funcion que definimos\n",
     "        # Hint2: Deben multiplicar con d_h\n",
-    "        # YOUR CODE HERE\n",
     "        d_b_hidden += d_f\n",
     "        \n",
-    "        # Aprox 1 linea para backprop en U\n",
     "        d_U += np.dot(d_f, inputs[t].T)\n",
-    "        # YOUR CODE HERE\n",
     "        \n",
-    "        # Aprox 1 linea para backprop V\n",
-    "        d_V += np.dot(d_f, hidden_states[t-1].T if t > 0 else np.zeros_like(hidden_states[0]).T)\n",
-    "        # YOUR CODE HERE\n",
+    "        d_V += np.dot(d_f, hidden_states[t-1].T)\n",
     "        d_h_next = np.dot(V.T, d_f)\n",
-    "    \n",
-    "    # Empaquetar las gradientes\n",
+    "        \n",
     "    grads = d_U, d_V, d_W, d_b_hidden, d_b_out    \n",
     "    \n",
     "    # Corte de gradientes\n",
@@ -1572,7 +1556,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 246,
    "id": "21b7b1d7",
    "metadata": {
     "ExecuteTime": {
@@ -1595,18 +1579,13 @@
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Warning: Got 2.19275e+01 -> 0x10e7c0f4, expected 0xf0c8ccc9\n"
-     ]
-    },
-    {
      "data": {
       "text/html": [
-       "<hr style=\"height:10px;border:none;color:#f00;background-color:#f00;\" />\n",
-       "        <div class=\"alert alert-box alert-danger\">\n",
-       "        <h1> <!--{id:\"WRONGMARK\", marks:\"5\"}--> Test failed ✘ [0/5] marks  </h1> </div>"
+       "\n",
+       "        <div class=\"alert alert-box alert-success\">\n",
+       "        <h1> <!--{id:\"CORRECTMARK\", marks:\"5\"}--> \n",
+       "         ✓ [5 marks] \n",
+       "         </h1> </div>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -1616,15 +1595,52 @@
      "output_type": "display_data"
     },
     {
-     "ename": "AssertionError",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mAssertionError\u001b[39m                            Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[19]\u001b[39m\u001b[32m, line 4\u001b[39m\n\u001b[32m      1\u001b[39m loss, grads = backward_pass(test_input, outputs, hidden_states, test_target, params)\n\u001b[32m      3\u001b[39m \u001b[38;5;28;01mwith\u001b[39;00m tick.marks(\u001b[32m5\u001b[39m):        \n\u001b[32m----> \u001b[39m\u001b[32m4\u001b[39m     \u001b[38;5;28;01massert\u001b[39;00m check_scalar(loss, \u001b[33m'\u001b[39m\u001b[33m0xf0c8ccc9\u001b[39m\u001b[33m'\u001b[39m)\n\u001b[32m      6\u001b[39m \u001b[38;5;28;01mwith\u001b[39;00m tick.marks(\u001b[32m5\u001b[39m):        \n\u001b[32m      7\u001b[39m     \u001b[38;5;28;01massert\u001b[39;00m check_hash(grads[\u001b[32m0\u001b[39m], ((\u001b[32m50\u001b[39m, \u001b[32m4\u001b[39m), -\u001b[32m16.16536590645467\u001b[39m))\n",
-      "\u001b[31mAssertionError\u001b[39m: "
-     ]
+     "data": {
+      "text/html": [
+       "\n",
+       "        <div class=\"alert alert-box alert-success\">\n",
+       "        <h1> <!--{id:\"CORRECTMARK\", marks:\"5\"}--> \n",
+       "         ✓ [5 marks] \n",
+       "         </h1> </div>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "        <div class=\"alert alert-box alert-success\">\n",
+       "        <h1> <!--{id:\"CORRECTMARK\", marks:\"5\"}--> \n",
+       "         ✓ [5 marks] \n",
+       "         </h1> </div>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "        <div class=\"alert alert-box alert-success\">\n",
+       "        <h1> <!--{id:\"CORRECTMARK\", marks:\"5\"}--> \n",
+       "         ✓ [5 marks] \n",
+       "         </h1> </div>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -1675,7 +1691,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 247,
    "id": "7d0649f4",
    "metadata": {
     "ExecuteTime": {
@@ -1755,26 +1771,40 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Época 0, training loss: 16.20120268714567, validation loss: 19.20788734386862\n",
-      "Época 100, training loss: 10.8068905270442, validation loss: 12.79569556853421\n",
-      "Época 200, training loss: 8.312878949812902, validation loss: 9.89429993829022\n",
-      "Época 300, training loss: 7.171077524587791, validation loss: 8.694895567155793\n",
-      "Época 400, training loss: 6.599992481762153, validation loss: 8.151054892274098\n",
-      "Época 500, training loss: 6.254947213716362, validation loss: 7.831942278619581\n",
-      "Época 600, training loss: 6.001980395302946, validation loss: 7.589921858504811\n",
-      "Época 700, training loss: 5.7890631379775455, validation loss: 7.3777668062174016\n",
-      "Época 800, training loss: 5.592949363360722, validation loss: 7.179297655567778\n",
-      "Época 900, training loss: 5.401548562285673, validation loss: 6.989221214458932\n",
-      "Época 1000, training loss: 5.209293512669967, validation loss: 6.810666181770868\n",
-      "Época 1100, training loss: 5.0182384394050334, validation loss: 6.6601405893579395\n",
-      "Época 1200, training loss: 4.840872640050667, validation loss: 6.5661382160804775\n",
-      "Época 1300, training loss: 4.701133143328813, validation loss: 6.5496032138882425\n",
-      "Época 1400, training loss: 4.628097166851849, validation loss: 6.624877520303373\n",
-      "Época 1500, training loss: 4.60487996825089, validation loss: 6.765955906574243\n",
-      "Época 1600, training loss: 4.584609499388464, validation loss: 6.891777267755761\n",
-      "Época 1700, training loss: 4.558522530532322, validation loss: 6.982584556070458\n",
-      "Época 1800, training loss: 4.531948659029796, validation loss: 7.0478873645056295\n",
-      "Época 1900, training loss: 4.507775795121047, validation loss: 7.096278412514602\n"
+      "Época 0, training loss: 4.05046509496538, validation loss: 4.801971835967155\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Época 100, training loss: 2.729834076574944, validation loss: 3.2320576163982677\n",
+      "Época 200, training loss: 2.109414655736732, validation loss: 2.4980526328844146\n",
+      "Época 200, training loss: 2.109414655736732, validation loss: 2.4980526328844146\n",
+      "Época 300, training loss: 1.8235746981413405, validation loss: 2.198677070984531\n",
+      "Época 300, training loss: 1.8235746981413405, validation loss: 2.198677070984531\n",
+      "Época 400, training loss: 1.6884087861997366, validation loss: 2.077078608023496\n",
+      "Época 400, training loss: 1.6884087861997366, validation loss: 2.077078608023496\n",
+      "Época 500, training loss: 1.6129170568126507, validation loss: 2.0163543941716577\n",
+      "Época 500, training loss: 1.6129170568126507, validation loss: 2.0163543941716577\n",
+      "Época 600, training loss: 1.5624028954062004, validation loss: 1.9780311638492243\n",
+      "Época 600, training loss: 1.5624028954062004, validation loss: 1.9780311638492243\n",
+      "Época 700, training loss: 1.523501919791708, validation loss: 1.9496130467843362\n",
+      "Época 700, training loss: 1.523501919791708, validation loss: 1.9496130467843362\n",
+      "Época 800, training loss: 1.4895828031292173, validation loss: 1.9248315278145824\n",
+      "Época 800, training loss: 1.4895828031292173, validation loss: 1.9248315278145824\n",
+      "Época 900, training loss: 1.4558865884071515, validation loss: 1.8978220912154355\n",
+      "Época 900, training loss: 1.4558865884071515, validation loss: 1.8978220912154355\n",
+      "Época 1000, training loss: 1.4173709332614925, validation loss: 1.860079817655523\n",
+      "Época 1000, training loss: 1.4173709332614925, validation loss: 1.860079817655523\n",
+      "Época 1100, training loss: 1.3681783634403946, validation loss: 1.7993697026413986\n",
+      "Época 1100, training loss: 1.3681783634403946, validation loss: 1.7993697026413986\n",
+      "Época 1200, training loss: 1.3051122158818886, validation loss: 1.7081695076503576\n",
+      "Época 1200, training loss: 1.3051122158818886, validation loss: 1.7081695076503576\n",
+      "Época 1300, training loss: 1.2330985128125034, validation loss: 1.5999314734390082\n",
+      "Época 1300, training loss: 1.2330985128125034, validation loss: 1.5999314734390082\n",
+      "Época 1400, training loss: 1.1619900522538609, validation loss: 1.4998577602386731\n",
+      "Época 1400, training loss: 1.1619900522538609, validation loss: 1.4998577602386731\n"
      ]
     }
    ],
@@ -2046,7 +2076,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "id": "a2c856b9",
    "metadata": {
     "ExecuteTime": {
@@ -2137,7 +2167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "id": "412a27b5",
    "metadata": {
     "ExecuteTime": {
@@ -2282,7 +2312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "id": "8a59a4dc",
    "metadata": {
     "ExecuteTime": {
@@ -2397,7 +2427,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "id": "71f758df",
    "metadata": {
     "ExecuteTime": {
@@ -2504,7 +2534,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "id": "a753b92e",
    "metadata": {
     "ExecuteTime": {
@@ -2662,7 +2692,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "id": "58def9bc",
    "metadata": {
     "ExecuteTime": {
@@ -3364,7 +3394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "id": "a0f4e03a",
    "metadata": {
     "ExecuteTime": {
@@ -3392,7 +3422,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "id": "b5b161e6",
    "metadata": {
     "ExecuteTime": {
@@ -3510,7 +3540,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "id": "39147fe4",
    "metadata": {
     "ExecuteTime": {
@@ -3563,7 +3593,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "id": "386a179c",
    "metadata": {
     "ExecuteTime": {
@@ -3633,7 +3663,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "id": "2ae6e2f8",
    "metadata": {
     "ExecuteTime": {
@@ -3705,7 +3735,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": null,
    "id": "dfb5df7a",
    "metadata": {
     "ExecuteTime": {
@@ -3776,7 +3806,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": null,
    "id": "11ae7532",
    "metadata": {
     "ExecuteTime": {
@@ -3916,7 +3946,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": null,
    "id": "ec8794e6",
    "metadata": {
     "ExecuteTime": {
@@ -3949,7 +3979,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": null,
    "id": "7b4eae30",
    "metadata": {
     "ExecuteTime": {
@@ -4028,7 +4058,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": null,
    "id": "f8ac2320",
    "metadata": {
     "ExecuteTime": {
@@ -4148,7 +4178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": null,
    "id": "0f8e00b4",
    "metadata": {
     "ExecuteTime": {
