--- a/lab4.ipynb
+++ b/lab4.ipynb
@@ -2519,8 +2519,17 @@
    "source": [
     "**PREGUNTAS:**\n",
     "* ¿Cuál es la implicación del overfitting en modelos como Word2Vec?\n",
+    "\n",
+    "    Las representaciones (vectores) capturan relaciones poco útiles fuera del conjunto de entrenamiento.\n",
+    "\n",
     "* ¿Qué tan bien encontró palabras cercanas su modelo Word2Vec? ¿Podría mejorar? ¿Cómo podría mejorar?\n",
-    "* A grandes rasgos, ¿cuál es la diferencia entre Word2Vec y BERT?"
+    "\n",
+    "    Pendiente\n",
+    "\n",
+    "* A grandes rasgos, ¿cuál es la diferencia entre Word2Vec y BERT?\n",
+    "\n",
+    "    Word2Vec: Red neuronal simple (CBOW o Skip-gram), \n",
+    "    BERT: Transformer bidireccional (autoatención)"
    ]
   },
   {
