--- a/htd2.ipynb
+++ b/htd2.ipynb
@@ -19,8 +19,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "a88d20de",
+   "execution_count": 7,
+   "id": "92e2602e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,12 @@
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.preprocessing import StandardScaler\n",
     "import matplotlib.pyplot as plt\n",
-    "import seaborn as sns"
+    "import seaborn as sns\n",
+    "import torch\n",
+    "import torch.nn as nn\n",
+    "import torch.nn.functional as F\n",
+    "import torch.optim as optim\n",
+    "from torch.utils.data import DataLoader, TensorDataset"
    ]
   },
   {
@@ -147,6 +152,185 @@
     "print(\"- X_train_scaled, X_val_scaled: características estandarizadas\")\n",
     "print(\"- y_train, y_val: etiquetas\")\n",
     "print(\"- df: DataFrame completo con información descriptiva\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "88fb6baa",
+   "metadata": {},
+   "source": [
+    "### Task 2 - Arquitectura modelo\n",
+    "Cree una red neuronal feedforward simple utilizando nn.Module de PyTorch. Luego, defina capa de entrada, capas\n",
+    "ocultas y capa de salida. Después, elija las funciones de activación y el número de neuronas por capa"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "39f4a16a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Dispositivo utilizado: cpu\n",
+      "Arquitectura del modelo:\n",
+      "IrisClassifier(\n",
+      "  (fc1): Linear(in_features=4, out_features=16, bias=True)\n",
+      "  (fc2): Linear(in_features=16, out_features=8, bias=True)\n",
+      "  (fc3): Linear(in_features=8, out_features=3, bias=True)\n",
+      "  (dropout): Dropout(p=0.2, inplace=False)\n",
+      ")\n",
+      "\n",
+      "Número total de parámetros: 243\n",
+      "Parámetros entrenables: 243\n",
+      "\n",
+      "Forma de los tensores:\n",
+      "X_train: torch.Size([120, 4])\n",
+      "X_val: torch.Size([30, 4])\n",
+      "y_train: torch.Size([120])\n",
+      "y_val: torch.Size([30])\n",
+      "\n",
+      "DataLoaders creados:\n",
+      "Tamaño del lote: 16\n",
+      "Número de lotes de entrenamiento: 8\n",
+      "Número de lotes de validación: 2\n",
+      "\n",
+      "Configuración de entrenamiento:\n",
+      "Función de pérdida: CrossEntropyLoss()\n",
+      "Optimizador: Adam (\n",
+      "Parameter Group 0\n",
+      "    amsgrad: False\n",
+      "    betas: (0.9, 0.999)\n",
+      "    capturable: False\n",
+      "    decoupled_weight_decay: False\n",
+      "    differentiable: False\n",
+      "    eps: 1e-08\n",
+      "    foreach: None\n",
+      "    fused: None\n",
+      "    lr: 0.001\n",
+      "    maximize: False\n",
+      "    weight_decay: 0.0001\n",
+      ")\n",
+      "Tasa de aprendizaje: 0.001\n",
+      "\n",
+      "Prueba del forward pass:\n",
+      "Input shape: torch.Size([3, 4])\n",
+      "Output shape: torch.Size([3, 3])\n",
+      "Predictions: [1 1 1]\n",
+      "Probabilities:\n",
+      "[[0.31886908 0.41032174 0.27080914]\n",
+      " [0.3610109  0.38580552 0.25318357]\n",
+      " [0.3129109  0.3904168  0.29667222]]\n",
+      "\n",
+      "Modelo creado y configurado\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Task 2 - Arquitectura del modelo\n",
+    "\n",
+    "# Configurar dispositivo (GPU si está disponible, sino CPU)\n",
+    "device = torch.device('cuda' if torch.cuda.is_available() else 'cpu')\n",
+    "print(f\"Dispositivo utilizado: {device}\")\n",
+    "\n",
+    "# Definir la arquitectura de la red neuronal feedforward\n",
+    "class IrisClassifier(nn.Module):\n",
+    "    def __init__(self, input_size=4, hidden_size1=16, hidden_size2=8, num_classes=3):\n",
+    "        super(IrisClassifier, self).__init__()\n",
+    "        \n",
+    "        # Definir las capas\n",
+    "        self.fc1 = nn.Linear(input_size, hidden_size1)      # Capa de entrada: 4 -> 16\n",
+    "        self.fc2 = nn.Linear(hidden_size1, hidden_size2)    # Primera capa oculta: 16 -> 8\n",
+    "        self.fc3 = nn.Linear(hidden_size2, num_classes)     # Capa de salida: 8 -> 3\n",
+    "        \n",
+    "        # Capa de dropout para regularización\n",
+    "        self.dropout = nn.Dropout(0.2)\n",
+    "        \n",
+    "    def forward(self, x):\n",
+    "        # Forward pass a través de la red\n",
+    "        x = F.relu(self.fc1(x))         # Activación ReLU en primera capa\n",
+    "        x = self.dropout(x)             # Aplicar dropout\n",
+    "        x = F.relu(self.fc2(x))         # Activación ReLU en segunda capa\n",
+    "        x = self.dropout(x)             # Aplicar dropout\n",
+    "        x = self.fc3(x)                 # Capa de salida (sin activación, se aplica en loss)\n",
+    "        return x\n",
+    "\n",
+    "# Crear instancia del modelo\n",
+    "model = IrisClassifier(input_size=4, hidden_size1=16, hidden_size2=8, num_classes=3)\n",
+    "model = model.to(device)\n",
+    "\n",
+    "# Mostrar la arquitectura del modelo\n",
+    "print(\"Arquitectura del modelo:\")\n",
+    "print(model)\n",
+    "print(f\"\\nNúmero total de parámetros: {sum(p.numel() for p in model.parameters())}\")\n",
+    "print(f\"Parámetros entrenables: {sum(p.numel() for p in model.parameters() if p.requires_grad)}\")\n",
+    "\n",
+    "# Convertir datos de numpy a tensores de PyTorch\n",
+    "X_train_tensor = torch.FloatTensor(X_train_scaled).to(device)\n",
+    "X_val_tensor = torch.FloatTensor(X_val_scaled).to(device)\n",
+    "y_train_tensor = torch.LongTensor(y_train).to(device)\n",
+    "y_val_tensor = torch.LongTensor(y_val).to(device)\n",
+    "\n",
+    "print(f\"\\nForma de los tensores:\")\n",
+    "print(f\"X_train: {X_train_tensor.shape}\")\n",
+    "print(f\"X_val: {X_val_tensor.shape}\")\n",
+    "print(f\"y_train: {y_train_tensor.shape}\")\n",
+    "print(f\"y_val: {y_val_tensor.shape}\")\n",
+    "\n",
+    "# Crear DataLoaders para entrenamiento por lotes\n",
+    "batch_size = 16\n",
+    "train_dataset = TensorDataset(X_train_tensor, y_train_tensor)\n",
+    "val_dataset = TensorDataset(X_val_tensor, y_val_tensor)\n",
+    "\n",
+    "train_loader = DataLoader(train_dataset, batch_size=batch_size, shuffle=True)\n",
+    "val_loader = DataLoader(val_dataset, batch_size=batch_size, shuffle=False)\n",
+    "\n",
+    "print(f\"\\nDataLoaders creados:\")\n",
+    "print(f\"Tamaño del lote: {batch_size}\")\n",
+    "print(f\"Número de lotes de entrenamiento: {len(train_loader)}\")\n",
+    "print(f\"Número de lotes de validación: {len(val_loader)}\")\n",
+    "\n",
+    "# Definir función de pérdida y optimizador\n",
+    "criterion = nn.CrossEntropyLoss()  # Para clasificación multiclase\n",
+    "optimizer = optim.Adam(model.parameters(), lr=0.001, weight_decay=1e-4)\n",
+    "\n",
+    "print(f\"\\nConfiguración de entrenamiento:\")\n",
+    "print(f\"Función de pérdida: {criterion}\")\n",
+    "print(f\"Optimizador: {optimizer}\")\n",
+    "print(f\"Tasa de aprendizaje: 0.001\")\n",
+    "\n",
+    "# Función para probar el modelo con datos de ejemplo\n",
+    "def test_forward_pass():\n",
+    "    model.eval()\n",
+    "    with torch.no_grad():\n",
+    "        # Tomar una muestra pequeña para probar\n",
+    "        sample_input = X_train_tensor[:3]  # 3 muestras\n",
+    "        output = model(sample_input)\n",
+    "        probabilities = F.softmax(output, dim=1)\n",
+    "        predictions = torch.argmax(output, dim=1)\n",
+    "        \n",
+    "        print(f\"\\nPrueba del forward pass:\")\n",
+    "        print(f\"Input shape: {sample_input.shape}\")\n",
+    "        print(f\"Output shape: {output.shape}\")\n",
+    "        print(f\"Predictions: {predictions.cpu().numpy()}\")\n",
+    "        print(f\"Probabilities:\\n{probabilities.cpu().numpy()}\")\n",
+    "\n",
+    "test_forward_pass()\n",
+    "print(\"\\nModelo creado y configurado\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2174b64e",
+   "metadata": {},
+   "source": [
+    "### Task 3 - Funciones de Pérdida\n",
+    "Utilice diferentes funciones de pérdida comunes como Cross-Entropy Loss y MSE para clasificación. Entrene el\n",
+    "modelo con diferentes funciones de pérdida y registre las pérdidas de entrenamiento y test. Debe utilizar al menos 3\n",
+    "diferentes funciones. Es decir, procure que su código sea capaz de parametrizar el uso de diferentes funciones de\n",
+    "pérdida."
    ]
   }
  ],
