feat: hdt2, taks 7

--- a/htd2.ipynb
+++ b/htd2.ipynb
@@ -2128,7 +2128,55 @@
    "cell_type": "markdown",
    "id": "862775ae",
    "metadata": {},
-   "source": []
+   "source": [
+    "### Task 7- Discusión\n",
+    "Discuta los resultados obtenidos de diferentes modelos. Compare la velocidad de convergencia y el rendimiento final\n",
+    "de modelos utilizando diferentes funciones de pérdida, técnicas de regularización, y algoritmos de optimización.\n",
+    "Explore y discuta por qué ciertas técnicas podrían conducir a un mejor rendimiento. tanto técnicas de regularización,\n",
+    "funciones de pérdida como algoritmos de optimización."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "288ccc12",
+   "metadata": {},
+   "source": [
+    "Al comparar los diferentes optimizadores, se observan diferencias claras tanto en la **velocidad de convergencia** como en el **rendimiento final**:\n",
+    "\n",
+    "1. **Velocidad de convergencia**  \n",
+    "   - Los métodos basados en SGD con momentum y Nesterov mostraron una convergencia muy rápida, alcanzando alta precisión y F1 en menos de 10 épocas.  \n",
+    "   - Adam (1e-3) también converge relativamente rápido, aunque su desempeño final fue un poco menor en validación.  \n",
+    "   - Optimizers como Adagrad y Adamax tuvieron una curva más lenta y no alcanzaron la misma precisión que los demás.  \n",
+    "   - Adam con tasa muy baja (5e-4) fue el más lento y se quedó en un rendimiento final bajo.\n",
+    "\n",
+    "2. **Rendimiento final (Accuracy y F1)**  \n",
+    "   - **SGD con momentum y Nesterov** obtuvieron las mejores métricas finales, con ~96.6% de precisión y F1 cercano a 0.97.  \n",
+    "   - Adam y RMSprop quedaron un poco atrás, alrededor del 93%.  \n",
+    "   - AdamW, a pesar de incluir regularización con weight decay, no mejoró respecto a Adam estándar y se mantuvo cercano al 93%.  \n",
+    "   - Adagrad y Adamax quedaron limitados a ~86%.  \n",
+    "   - SGD simple con lr=0.1 y Adam con lr=5e-4 fueron los peores en validación.\n",
+    "\n",
+    "3. **Tiempos de entrenamiento**  \n",
+    "   - Todos los métodos estuvieron en un rango de 1.6–2.0 segundos, con diferencias mínimas. Por lo tanto, el costo computacional no fue determinante en este dataset pequeño.\n",
+    "\n",
+    "4. **Regularización**  \n",
+    "   - La combinación AdamW_wd1e-2 mostró que la regularización por weight decay ayudó a estabilizar la pérdida, pero no mejoró métricas frente a Adam. En datasets más grandes o complejos probablemente tendría mayor efecto.  \n",
+    "   - La combinación sin regularización explícita (SGD_nesterov, SGD_mom0.9) tuvo excelente desempeño, posiblemente porque el dataset es pequeño y no tiende a sobreajustar.\n",
+    "\n",
+    "5. **Conclusión**  \n",
+    "   - Para este problema, **SGD con momentum o Nesterov** es la mejor elección: rápida convergencia, alta precisión y F1.  \n",
+    "   - Adam es competitivo y más estable en escenarios generales, aunque en este dataset perdió frente a SGD.  \n",
+    "   - Técnicas de regularización no fueron determinantes aquí, pero en problemas más complejos son clave para mejorar la generalización.  \n",
+    "   - En general, el experimento muestra cómo diferentes algoritmos de optimización afectan tanto la rapidez como el rendimiento final, confirmando la importancia de elegir el optimizador adecuado según el problema."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8a9b3594",
+   "metadata": {},
+   "source": [
+    "## Ejercicio 2"
+   ]
   }
  ],
  "metadata": {
