feat: hdt2, excercise 2

--- a/htd2.ipynb
+++ b/htd2.ipynb
@@ -2177,6 +2177,32 @@
    "source": [
     "## Ejercicio 2"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "16848651",
+   "metadata": {},
+   "source": [
+    "### 1. ¿Cuál es la principal innovación de la arquitectura Transformer?\n",
+    "\n",
+    "La innovacion principal es que elimina por completo las redes recurrentes y convolucionales que se usaban antes y se basa solo en mecanismos de atencion en especial la auto atencion esto permite capturar dependencias entre palabras sin importar la distancia dentro de la secuencia y hace el entrenamiento mas rapido y paralelizable\n",
+    "\n",
+    "### 2. ¿Cómo funciona el mecanismo de atención del scaled dot-product?\n",
+    "\n",
+    "El scaled dot product usa queries keys y values primero calcula el producto punto entre la query y todas las keys luego divide entre la raiz cuadrada de la dimension de las keys para que los valores no crezcan demasiado despues aplica softmax para obtener pesos y finalmente combina los values con esos pesos de atencion\n",
+    "\n",
+    "### 3. ¿Por qué se utiliza la atención de múltiples cabezales en Transformer?\n",
+    "\n",
+    "Se usa multi head attention porque cada cabeza puede enfocarse en relaciones diferentes de la secuencia al mismo tiempo asi el modelo aprende distintas perspectivas en paralelo y obtiene una representacion mas rica que con una sola cabeza\n",
+    "\n",
+    "### 4. ¿Cómo se incorporan los positional encodings en el modelo Transformer?\n",
+    "\n",
+    "Como el modelo no tiene recurrencia ni convoluciones no sabe el orden de las palabras por eso se suman vectores llamados positional encodings a los embeddings de entrada estos vectores se calculan con funciones seno y coseno de distintas frecuencias lo que da una representacion unica para cada posicion\n",
+    "\n",
+    "### 5. ¿Cuáles son algunas aplicaciones de la arquitectura Transformer más allá de la machine translation?\n",
+    "\n",
+    "El Transformer nacio en traduccion automatica pero despues se aplico en parsing de oraciones en ingles y mostro buenos resultados ademas ha servido en resumen de texto respuesta a preguntas clasificacion de secuencias modelos de vision de audio y de video en general se volvio la base de muchos avances en deep learning"
+   ]
   }
  ],
  "metadata": {
